fancy slider added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="https://sakib-ruet-cse17.github.io/meal-details/">meal-details</a></li>
         <li><a href="https://sakib-ruet-cse17.github.io/music-search/">music-search</a></li>
         <li><a href="#">my-sites</a></li>
+        <li><a href="https://sakib-ruet-cse17.github.io/fancy-slider/">fancy-slider</a></li>
         <li><a href="#">Upcoming...</a></li>
     </ol>
 </body>
